--- a/thank.html
+++ b/thank.html
@@ -46,6 +46,6 @@
 	<h1>THANK YOU!</h1>
 	<p>Your query will be processed. You will be updated as you deserve it!</p>
 	<br><br><br><br>
-	<a href="home.html">go back</a>
+	<a href="index.html">go back</a>
 </body>
 </html>
