--- a/tourist.html
+++ b/tourist.html
@@ -256,7 +256,7 @@
 <body>
 	<div class="nav">
 		<span style="width: 300px; display: inline-block;"></span>
-		<a href="home.html">About Dumaguete</a>
+		<a href="index.html">About Dumaguete</a>
 		<a href="tourist.html" style="border-bottom: 2px solid #00B8A9; color: #00B8A9;">Tourist Spots</a>
 		<a href="contact.html">Contact Us</a>
 		<p style="margin-left: 100px;
