--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 <body>
 	<div class="nav">
 		<span style="width: 300px; display: inline-block;"></span>
-		<a href="home.html" style="border-bottom: 2px solid #00B8A9; color: #00B8A9;">About Dumaguete</a>
+		<a href="index.html" style="border-bottom: 2px solid #00B8A9; color: #00B8A9;">About Dumaguete</a>
 		<a href="tourist.html">Tourist Spots</a>
 		<a href="contact.html">Contact Us</a>
 		<p style="margin-left: 100px;
